_build/html/reports/functions.log
Traceback (most recent call last):
  File "/Users/shannonellis/.local/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/shannonellis/.local/lib/python3.7/site-packages/nbclient/client.py", line 1082, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/shannonellis/.local/lib/python3.7/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/shannonellis/.local/lib/python3.7/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/anaconda3/envs/cogs18/lib/python3.7/asyncio/base_events.py", line 587, in run_until_complete
    return future.result()
  File "/Users/shannonellis/.local/lib/python3.7/site-packages/nbclient/client.py", line 536, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/shannonellis/.local/lib/python3.7/site-packages/nbclient/client.py", line 827, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/shannonellis/.local/lib/python3.7/site-packages/nbclient/client.py", line 735, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# Note: once you have a keyword argument, 
# you can't have other positional arguments afterwards
# this cell will produce an error
exponentiate(number = 2, 3)
------------------

[0;36m  File [0;32m"<ipython-input-37-b0bcacff4108>"[0;36m, line [0;32m4[0m
[0;31m    exponentiate(number = 2, 3)[0m
[0m                            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m positional argument follows keyword argument

SyntaxError: positional argument follows keyword argument (<ipython-input-37-b0bcacff4108>, line 4)

